--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,11 @@
 <start-class>com.vdenotaris.spring.boot.security.saml.web.Application</start-class>
 </properties>
 <!--  Inherit defaults from Spring Boot  -->
-<--
 <parent>
 <groupId>org.springframework.boot</groupId>
 <artifactId>spring-boot-starter-parent</artifactId>
 <version>2.1.1.RELEASE</version>
-</parent>-->
+</parent>
 <dependencies>
 <dependency>
 <groupId>org.springframework.boot</groupId>
